[package]
name = "elements-lang"
version = "0.2.2"
edition = "2021"
authors = ["Lin Jiang"]
description = "A geometry markup language and diagram renderer."
license = "MIT"
readme = "README.md"
repository = "https://hg.sr.ht/~lnjng/elements"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "elements"
path = "src/main.rs"
